Update task3